# comux

./: .gitignore  .vercelignore  CONTRIBUTING.md  README.md  comux  index.js  package.json  pnpm-lock.yaml  vitest.config.ts
.comux-hooks/: CLAUDE.md  README.md
__tests__/: README.md  actions.devMode.test.ts  agentLaunch.test.ts  agentSession.test.ts  attachAgent.test.ts  baseBranchAndPrefix.test.ts  builtinRitualsExport.test.ts  comux.e2e.create-pane.test.ts  comux.e2e.wrap-interactions.test.ts  comuxAttentionService.test.ts  comuxFocusService.test.ts  comuxFocusServiceSourceBuild.test.ts  comuxNativeProgressiveEnhancement.test.ts  covenDesktopUse.test.ts  covenSessions.test.ts  covenSessionsPanel.test.tsx  devSource.test.ts  devWatchExit.test.ts  focusDetection.test.ts  gitignore.test.ts  kebabMenuPopup.test.tsx  mergeTargets.test.ts  mergeValidation.test.ts  migrateVmuxConfig.test.ts  newPanePopup.test.tsx  notificationSoundPreview.test.ts  notificationSounds.test.ts  notificationSoundsPopup.test.tsx  openRouterApiKeySetup.test.ts  paneCard.test.tsx  paneGrouping.test.ts  paneMenuActions.test.ts  paneProject.test.ts  paneRestore.test.ts  paneVisibility.test.ts  popupManager.agentChoice.test.ts  popupManager.kebabMenu.test.ts  projectActions.test.ts  (+37 more)
native/macos/comux-tauri/src-tauri/: Cargo.toml  tauri.conf.json
native/macos/comux-tauri/src-tauri/capabilities/: default.json
native/macos/comux-tauri/src-tauri/icons/: icon.icns
native/macos/comux-tauri/src-tauri/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+296 files in other folders)
