[package]
name = "comux-desktop"
version = "0.0.8"
description = "Comux desktop cockpit"
authors = ["Valentina Alexander"]
license = "MIT"
edition = "2021"

[lib]
name = "comux_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
