[package]
name = "comux-tauri"
version = "0.0.7"
edition = "2021"
rust-version = "1.77"

[lib]
name = "comux_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(not(target_os = "ios"))'.dependencies]
portable-pty = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
